[package]
name = "arps"
version = "0.2.4"
edition.workspace = true
repository = "https://github.com/offgrid-ing/arp"
description = "Relay server for the Agent Relay Protocol"
rust-version.workspace = true
license.workspace = true

[lib]
name = "arps"
path = "src/lib.rs"

[[bin]]
name = "arps"
path = "src/main.rs"

[dependencies]
arp-common = { path = "../arp-common", features = ["update"] }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
axum = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
rustls = { workspace = true }
